--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "anagramageddon",
   "version": "0.1.0",
-  "homepage": "https://wjrm500.github.io/Anagramageddon-frontend",
+  "homepage": "https://wjrm500.github.io/Anagramageddon",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +11,7 @@
     "react-countdown": "^2.3.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
