Handling disconnect robustly

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 REACT_APP_API_HTTP_URL="https://api.anagrams-online.wjrm500.com"
 REACT_APP_API_WS_URL="wss://api.anagrams-online.wjrm500.com"
+REACT_APP_SHOW_DEBUG=false
